[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "web-scraper"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
python = "^3.8"
html5lib = "1.1"
pandas = "^2.0.0"
requests = "^2.28.2"
discord = "^2.2.2"
table2ascii = "1.1.1"
Flask = "^2.2.3"
[tool.poetry.dev-dependencies]
